--- a/assets/custom.scss
+++ b/assets/custom.scss
@@ -1,5 +1,16 @@
 ---
 ---
+// Booostrap  fix
+
+.container {
+  @media (min-width: 1200px){
+    max-width: 850px;
+  }
+  @media (min-width: 992px){
+    max-width: 850px;
+  }
+}
+// Jekyll search
 #results-container {
   position: absolute;
   margin: 0;
