--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,7 +33,7 @@
   </div>
 
   <div class="text-center">
-    Built with ❤️ by <a href="https://floriancourgey.com?ref=blog.floriancourgey.com" target="_blank">Florian Courgey</a><br>
+    Built with ❤️ and ☕ by <a href="https://floriancourgey.com?ref=blog.floriancourgey.com" target="_blank">Florian Courgey</a><br>
     using <a href="https://jekyllrb.com" target="_blank">Jekyll</a>, <a href="https://getbootstrap.com/" target="_blank">Bootstrap 4</a> and <a href="https://github.com/jekyll/minima" target="_blank">Minima</a> on steroids<br>
     hosted on <a href="https://pages.github.com/" target="_blank">GitHub Pages</a><br><br>
     Fork me on <a href="https://github.com/floriancourgey/www" target="_blank">GitHub</a>
