--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,6 +47,7 @@
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input id="search-input" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <i class="fas fa-question" data-toggle="tooltip" title="Look for 'Search' to find out how this simple component is made" style="color:lightgrey"></i>
         <ul id="results-container"></ul>
       </form>
     </div>
