--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,8 +5,8 @@
 
     <h2 class="footer-heading">{{ site.title | escape }}</h2>
 
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
+    <div class="row">
+      <div class="col-sm-3">
         <ul class="contact-list">
           <li class="p-name">
             {%- if site.author -%}
@@ -21,11 +21,19 @@
         </ul>
       </div>
 
-      <div class="footer-col footer-col-2">
-        {%- include social.html -%}
+      <div class="col-sm-4">
+        <ul class="social-media-list">
+          <li><a href="https://github.com/floriancourgey"><i class="fab fa-github"></i> <span class="username">Github floriancourgey</span></a></li>
+          <li><a href="https://gitlab.com/floriancourgey"><i class="fab fa-gitlab"></i> <span class="username">Gitlab floriancourgey</span></a></li>
+          <li><a href="https://www.paypal.me/floriancourgey"><i class="fab fa-cc-paypal"></i> <span class="username">Paypal floriancourgey</span></a></li>
+          <li><a href="https://www.linkedin.com/in/floriancourgey"><i class="fab fa-linkedin"></i> <span class="username">Linkedin floriancourgey</span></a></li>
+          <li><a href="https://yelp.fr/biz/florian-courgey-fontenay-aux-roses"><i class="fab fa-yelp"></i> <span class="username">Yelp florian-courgey</span></a></li>
+          <li><a href="https://annuaire.laposte.fr/conseiller-en-systemes-informatiques/floriancourgey-com-81994022200014/"><i class="fas fa-mail-bulk"></i> <span class="username">La Poste floriancourgey-com</span></a></li>
+          <li><a href="{{ 'feed.xml' | relative_url }}"><i class="fas fa-rss"></i> <span class="username">{{ site.rss | escape }}</span></a></li>
+        </ul>
       </div>
 
-      <div class="footer-col footer-col-3">
+      <div class="col-sm-5">
         <p>{{- site.description | escape -}}</p>
       </div>
     </div>
