+ lightgallery for images in post

--- a/_includes/footer-javascript.html
+++ b/_includes/footer-javascript.html
@@ -16,3 +16,8 @@ SimpleJekyllSearch({
     $('[data-toggle="tooltip"]').tooltip();
   });
 </script>
+<!-- lightgallery -->
+<script defer src="https://cdn.jsdelivr.net/npm/lightgallery@1.6.11/dist/js/lightgallery.min.js" charset="utf-8"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/lightgallery@1.6.11/modules/lg-zoom.min.js" charset="utf-8"></script>
+<!-- custom js -->
+<script defer src="{{'/assets/js/lightgallery.js'|relative_url}}" charset="utf-8"></script>
