--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,16 +4,32 @@ layout: default
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
-    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-meta">
-      <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" title="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        {{ page.date | date: date_format }}
-      </time>
-      {%- if page.author -%}
-        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author | escape }}</span></span>
-      {%- endif -%}</p>
+    <h1 class="post-title p-name" itemprop="name headline">
+      {{ page.title | escape }}
+    </h1>
+    <div class="row post-meta">
+      <p class="col-6">
+        <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" title="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
+          {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+          {{ page.date | date: date_format }}
+        </time>
+        {%- if page.author -%}
+          • <span itemprop="author" itemscope itemtype="http://schema.org/Person">
+              <span class="p-author h-card" itemprop="name">{{ page.author | escape }}</span>
+            </span>
+        {%- endif -%}
+      </p>
+      <p class="col-6 text-right">
+        <a href="https://github.com/floriancourgey/www/edit/master/{{ page.path }}" target="_blank">
+          <i class="fas fa-pencil-alt"></i> Improve this page
+        </a>
+      </p>
+    </div>
   </header>
+
+  <div class="improve right hide-on-mobiles">
+
+  </div>
 
   <div class="post-content e-content" itemprop="articleBody">
     {{ content }}
