--- a/_includes/footer-javascript.html
+++ b/_includes/footer-javascript.html
@@ -21,3 +21,4 @@ SimpleJekyllSearch({
 <script defer src="https://cdn.jsdelivr.net/npm/lightgallery@1.6.11/modules/lg-zoom.min.js" charset="utf-8"></script>
 <!-- custom js -->
 <script defer src="{{'/assets/js/lightgallery.js'|relative_url}}" charset="utf-8"></script>
+<script defer src="{{'/assets/js/header-anchor.js'|relative_url}}" charset="utf-8"></script>
