+ disqus help for code highlighting

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,6 +42,11 @@ layout: default
 
   {%- if site.disqus.shortname -%}
     {%- include disqus_comments.html -%}
+    <p style="font-size:10px;color:darkgray;">
+      To display code in Disqus comment, use <code>&lt;pre&gt;&lt;code&gt;</code> tags. For example:<br/>
+      <code>&lt;pre&gt;&lt;code class="python"&gt;a = 'b';&lt;/code&gt;&lt;/pre&gt;</code><br/>
+      See <a href="https://help.disqus.com/commenting/syntax-highlighting" target="_blank">Disqus Syntax highlighting</a> for details.
+    </p>
   {%- endif -%}
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
