! footer social links to open in new tab

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,13 +23,13 @@
 
       <div class="col-sm-4">
         <ul class="social-media-list">
-          <li><a href="https://github.com/floriancourgey"><i class="fab fa-github"></i> <span class="username">Github floriancourgey</span></a></li>
-          <li><a href="https://gitlab.com/floriancourgey"><i class="fab fa-gitlab"></i> <span class="username">Gitlab floriancourgey</span></a></li>
-          <li><a href="https://www.paypal.me/floriancourgey"><i class="fab fa-cc-paypal"></i> <span class="username">Paypal floriancourgey</span></a></li>
-          <li><a href="https://www.linkedin.com/in/floriancourgey"><i class="fab fa-linkedin"></i> <span class="username">Linkedin floriancourgey</span></a></li>
-          <li><a href="https://yelp.fr/biz/florian-courgey-fontenay-aux-roses"><i class="fab fa-yelp"></i> <span class="username">Yelp florian-courgey</span></a></li>
-          <li><a href="https://annuaire.laposte.fr/conseiller-en-systemes-informatiques/floriancourgey-com-81994022200014/"><i class="fas fa-mail-bulk"></i> <span class="username">La Poste floriancourgey-com</span></a></li>
-          <li><a href="{{ 'feed.xml' | relative_url }}"><i class="fas fa-rss"></i> <span class="username">{{ site.rss | escape }}</span></a></li>
+          <li><a href="https://github.com/floriancourgey" target="_blank"><i class="fab fa-github"></i> <span class="username">Github floriancourgey</span></a></li>
+          <li><a href="https://gitlab.com/floriancourgey" target="_blank"><i class="fab fa-gitlab"></i> <span class="username">Gitlab floriancourgey</span></a></li>
+          <li><a href="https://www.paypal.me/floriancourgey" target="_blank"><i class="fab fa-cc-paypal"></i> <span class="username">Paypal floriancourgey</span></a></li>
+          <li><a href="https://www.linkedin.com/in/floriancourgey" target="_blank"><i class="fab fa-linkedin"></i> <span class="username">Linkedin floriancourgey</span></a></li>
+          <li><a href="https://yelp.fr/biz/florian-courgey-fontenay-aux-roses" target="_blank"><i class="fab fa-yelp"></i> <span class="username">Yelp florian-courgey</span></a></li>
+          <li><a href="https://annuaire.laposte.fr/conseiller-en-systemes-informatiques/floriancourgey-com-81994022200014/" target="_blank"><i class="fas fa-mail-bulk"></i> <span class="username">La Poste floriancourgey-com</span></a></li>
+          <li><a href="{{ 'feed.xml' | relative_url }}"><i class="fas fa-rss"></i> <span class="username">RSS Feed</span></a></li>
         </ul>
       </div>
 
