+ annoucement banner in pure BS 4

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,8 @@
   <body>
     {%- include gtm-noscript.html -%}
 
+    {%- include announcement.html -%}
+
     {%- include header.html -%}
 
     <main class="page-content" aria-label="Content">
