--- a/_includes/footer-javascript.html
+++ b/_includes/footer-javascript.html
@@ -1,12 +1,7 @@
-<!-- Simple Jekyll Search -->
-<script src="https://cdn.jsdelivr.net/npm/simple-jekyll-search@1.7.1/dest/simple-jekyll-search.min.js"></script>
-<script>
-SimpleJekyllSearch({
-  searchInput: document.getElementById('search-input'),
-  resultsContainer: document.getElementById('results-container'),
-  json: '/search.json'
-})
-</script>
+<!-- lunr js -->
+<script src="https://unpkg.com/lunr/lunr.js"></script>
+<script src="{{site_url}}/assets/js/search-lunr-documents.js" charset="utf-8"></script>
+<script src="{{site_url}}/assets/js/search-lunr.js" charset="utf-8"></script>
 <!-- Bootstrap 4 deps -->
 <script defer src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script defer src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
