--- a/_includes/footer-javascript.html
+++ b/_includes/footer-javascript.html
@@ -1,10 +1,10 @@
 <!-- lunr js -->
-<script src="https://unpkg.com/lunr/lunr.js"></script>
-<script src="{{site_url}}/assets/js/search-lunr-documents.js" charset="utf-8"></script>
-<script src="{{site_url}}/assets/js/search-lunr.js" charset="utf-8"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/lunr@2.3.5/lunr.min.js"></script>
+<script defer src="{{site_url}}/assets/js/search-lunr-documents.js" charset="utf-8"></script>
+<script defer src="{{site_url}}/assets/js/search-lunr.js" charset="utf-8"></script>
 <!-- Bootstrap 4 deps -->
-<script defer src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script defer src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
 <script type="text/javascript">
   $(function () {
     $('[data-toggle="tooltip"]').tooltip();
