--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,9 +11,9 @@ layout: default
 
   {%- if site.posts.size > 0 -%}
     <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
-    <ul class="post-list">
-      {%- for post in site.posts -%}
-      <li>
+    {%- for post in site.posts -%}
+    <div class="card shadow-sm mb-4 bg-white rounded">
+      <div class="card-body">
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
         <a class="post-link" href="{{ post.url | relative_url }}">
           <span class="post-meta">{{ post.date | date: date_format }}</span>
@@ -24,11 +24,16 @@ layout: default
         {%- if site.show_excerpts -%}
           {{ post.excerpt }}
         {%- endif -%}
-      </li>
-      {%- endfor -%}
-    </ul>
+        <div class="text-right">
+          <a href="{{ post.url | relative_url }}" class="card-link">Read more</a>
+        </div>
+      </div>
+    </div>
+    {%- endfor -%}
 
-    <p class="feed-subscribe"><svg class="svg-icon orange"><use xlink:href="{{ '/assets/minima-social-icons.svg#rss' | relative_url }}"></use></svg><a href="{{ "/feed.xml" | relative_url }}">Subscribe</a></p>
+    <p class="feed-subscribe">
+      <a href="{{ "/feed.xml" | relative_url }}"><i class="fas fa-rss"></i> Subscribe</a>
+    </p>
   {%- endif -%}
 
 </div>
