--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,22 @@
 
     {%- include footer.html -%}
 
+    <!-- Search Modal -->
+    <div class="modal fade p-0" id="modal-search" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog mw-100 m-0 h-100" role="document">
+        <div class="modal-content border-0 rounded-0 text-center">
+          <div class="modal-body">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <h5 class="modal-title">Search</h5>
+            <input id="search-input" autofocus type="search" class="border-bottom border-primary text-center" style="border:0;outline:none;background:none;" aria-label="Search">
+            <i class="fas fa-question" data-toggle="tooltip" title="Look for 'Search' to find out how this simple component is made" style="color:lightgrey"></i>
+            <div id="results-container" class="mx-0"></div>
+          </div>
+      </div>
+    </div>
+
     {%- include footer-javascript.html -%}
   </body>
 
