+ test algolia libs

--- a/_includes/footer-javascript.html
+++ b/_includes/footer-javascript.html
@@ -16,3 +16,6 @@
 <!-- custom js -->
 <script defer src="{{'/assets/js/lightgallery.js'|relative_url}}" charset="utf-8"></script>
 <script defer src="{{'/assets/js/header-anchor.js'|relative_url}}" charset="utf-8"></script>
+
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.10.4/dist/instantsearch.min.css">
+<script src="https://cdn.jsdelivr.net/npm/instantsearch.js@2.10.4"></script>
