--- a/_includes/footer-javascript.html
+++ b/_includes/footer-javascript.html
@@ -1,7 +1,5 @@
-<!-- lunr js -->
-<script defer src="https://cdn.jsdelivr.net/npm/lunr@2.3.5/lunr.min.js"></script>
-<script defer src="{{site_url}}/assets/js/search-lunr-documents.js" charset="utf-8"></script>
-<script defer src="{{site_url}}/assets/js/search-lunr.js" charset="utf-8"></script>
+<!-- Moment -->
+<script defer src="https://cdn.jsdelivr.net/npm/moment@2.22.2/moment.min.js"></script>
 <!-- Bootstrap 4 deps -->
 <script defer src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
@@ -17,5 +15,5 @@
 <script defer src="{{'/assets/js/lightgallery.js'|relative_url}}" charset="utf-8"></script>
 <script defer src="{{'/assets/js/header-anchor.js'|relative_url}}" charset="utf-8"></script>
 
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.10.4/dist/instantsearch.min.css">
-<script src="https://cdn.jsdelivr.net/npm/instantsearch.js@2.10.4"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/instantsearch.js@2.10.4"></script>
+<script defer src="{{site_url}}/assets/js/search-algolia.js" charset="utf-8"></script>
