+ header navbar Tools with floriancourgey.github.io links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,6 +44,21 @@
             </div>
           </div>
         </li>
+        <li class="nav-item">
+          <div class="btn-group">
+            <a href="#" class="nav-link dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Tools
+              <span class="sr-only">Toggle Dropdown</span>
+            </a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="{% post_url 2018-12-05-unix-cheatsheet %}">UNIX cheatsheet</a>
+              <a class="dropdown-item" href="{% post_url 2018-12-14-crack-and-hack-cheatsheet %}">Crack & Hack</a>
+              <a class="dropdown-item" href="https://floriancourgey.github.io/tools/string/?ref=blog.floriancourgey.com" target="_blank">String tools <i class="fas fa-xs fa-external-link-alt"></i></a>
+              <a class="dropdown-item" href="https://floriancourgey.github.io/tools/mpg/?ref=blog.floriancourgey.com" target="_blank">MPG tools <i class="fas fa-xs fa-external-link-alt"></i></a>
+              <a class="dropdown-item" href="https://floriancourgey.github.io/tools/seo/?ref=blog.floriancourgey.com" target="_blank">SEO tools <i class="fas fa-xs fa-external-link-alt"></i></a>
+            </div>
+          </div>
+        </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#modal-search" onclick="$('#search-input').focus();">
