--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="manifest" href="/manifest.json">
   {%- seo -%}
   {%- include gtm-script.html -%}
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
