+ home/ posts with category tags

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,8 +24,19 @@ layout: default
         {%- if site.show_excerpts -%}
           {{ post.excerpt }}
         {%- endif -%}
-        <div class="text-right">
-          <a href="{{ post.url | relative_url }}" class="card-link">Read more</a>
+        <div class="row">
+          <div class="col-md-10 post-categories">
+            {% for category in post.categories %}
+              <a href="{{site.baseurl}}/categories?id={{category|slugize}}"
+                class="badge badge-info">
+                <i class="fas fa-tag"></i> {{category}}
+              </a>
+              {% unless forloop.last %}&nbsp;{% endunless %}
+            {% endfor %}
+          </div>
+          <div class="col-md-2 text-right">
+            <a href="{{ post.url | relative_url }}" class="card-link">Read more</a>
+          </div>
         </div>
       </div>
     </div>
