--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,10 @@
 ---
 layout: default
 ---
-<article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
+{% assign author = site.authors | where: 'name', page.author | first %}
+
+<article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
   <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline">
       {{ page.title | escape }}
@@ -13,10 +15,12 @@ layout: default
           {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
           {{ page.date | date: date_format }}
         </time>
-        {%- if page.author -%}
-          • <span itemprop="author" itemscope itemtype="http://schema.org/Person">
-              <span class="p-author h-card" itemprop="name">{{ page.author | escape }}</span>
-            </span>
+        {%- if author -%}
+          • <a href="{{author.url}}">
+              <span itemprop="author" itemscope itemtype="http://schema.org/Person">
+                <span class="p-author h-card" itemprop="name">{{ author.name | escape }}</span>
+              </span>
+            </a>
         {%- endif -%}
       </p>
       <p class="col-6 text-right">
