--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -43,7 +43,19 @@
     <div class="text-center">
       Built with ❤️ and ☕ by <a href="https://floriancourgey.com?ref=blog.floriancourgey.com" target="_blank">Florian Courgey</a><br>
       using <a href="https://jekyllrb.com" target="_blank">Jekyll</a>, <a href="https://getbootstrap.com/" target="_blank">Bootstrap 4</a> and <a href="https://github.com/jekyll/minima" target="_blank">Minima</a> on steroids<br>
-      hosted on <a href="https://pages.github.com/" target="_blank">GitHub Pages</a><br><br>
+      hosted on <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>
+    </div>
+
+    <div class="text-center my-4">
+      <a href="https://travis-ci.com/floriancourgey/blog" target="_blank">
+        <img src="https://travis-ci.com/floriancourgey/blog.svg?branch=master" alt="">
+      </a>
+      <a href="https://stackshare.io/floriancourgey/blog"  target="_blank">
+        <img src="https://img.shields.io/badge/tech-stack-0690fa.svg?style=flat)](https://stackshare.io/floriancourgey/blog" alt="">
+      </a>
+    </div>
+
+    <div class="text-center">
       Fork me on <a href="https://github.com/floriancourgey/www" target="_blank">GitHub</a>
 
     </div>
