+ "Network" to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,8 @@
 
   <div class="container">
 
-    <div class="row mb-5">
-      <div class="col-sm-4">
+    <div class="row mb-3">
+      <div class="col-sm-3">
         <h5>Read more</h5>
         <ul class="list-unstyled m-0">
           <li><a href="/categories">Browse all categories</a></li>
@@ -12,7 +12,7 @@
         </ul>
       </div>
 
-      <div class="col-sm-4">
+      <div class="col-sm-3">
         <h5>Social profiles</h5>
         <ul class="list-unstyled m-0">
           <li><a href="https://github.com/floriancourgey" target="_blank"><i class="fab fa-github"></i> <span class="username">Github floriancourgey</span></a></li>
@@ -24,7 +24,17 @@
         </ul>
       </div>
 
-      <div class="col-sm-4">
+      <div class="col-sm-3">
+        <h5>Network</h5>
+        <ul class="list-unstyled m-0">
+          <li><a href="https://blog.floriancourgey.com" target="_blank"><i class="fas fa-newspaper"></i> <span class="username">blog.floriancourgey.com</span></a></li>
+          <li><a href="https://cloud.floriancourgey.com" target="_blank"><i class="fas fa-cloud"></i> <span class="username">cloud.floriancourgey.com</span></a></li>
+          <li><a href="https://floriancourgey.com" target="_blank"><i class="fas fa-meteor"></i> <span class="username">www.floriancourgey.com</span></a></li>
+          <li><a href="https://pro1.mail.ovh.net/owa/" target="_blank"><i class="fas fa-envelope-open-text"></i> <span class="username">emails</span></a></li>
+        </ul>
+      </div>
+
+      <div class="col-sm-3">
         <h5>Contact</h5>
         <ul class="list-unstyled m-0">
           <li><i class="fas fa-paper-plane"></i> blog@floriancourgey.com</li>
