--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,7 +30,9 @@
           <li><a href="https://blog.floriancourgey.com" target="_blank"><i class="fas fa-newspaper"></i> <span class="username">blog.floriancourgey.com</span></a></li>
           <li><a href="https://cloud.floriancourgey.com" target="_blank"><i class="fas fa-cloud"></i> <span class="username">cloud.floriancourgey.com</span></a></li>
           <li><a href="https://floriancourgey.com" target="_blank"><i class="fas fa-meteor"></i> <span class="username">www.floriancourgey.com</span></a></li>
+          <li><a href="https://shop.floriancourgey.com" target="_blank"><i class="fas fa-store"></i> <span class="username">shop.floriancourgey.com</span></a></li>
           <li><a href="https://pro1.mail.ovh.net/owa/" target="_blank"><i class="fas fa-envelope-open-text"></i> <span class="username">emails</span></a></li>
+          
         </ul>
       </div>
 
