--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,7 +39,7 @@
       <div class="col-sm-3">
         <h5>Contact</h5>
         <ul class="list-unstyled m-0">
-          <li><i class="fas fa-paper-plane"></i> blog@floriancourgey.com</li>
+          <li><i class="fas fa-paper-plane"></i> blog<!-- fu*k -->@<!-- spams -->floriancourgey<!-- *%$°# -->.com</li>
           <li><i class="fas fa-home"></i> Paris, France</li>
           <li><i class="fas fa-suitcase"></i> New York, USA</li>
         </ul>
