--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,7 +35,7 @@
               <span class="sr-only">Toggle Dropdown</span>
             </a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="{{ "/categories?id=neolane" | relative_url }}">Neolane</a>
+              <a class="dropdown-item" href="{{ "/awesome-adobe-campaign" | relative_url }}">ACC Getting started guide (awesome list)</a>
             </div>
           </div>
         </li>
