--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -70,7 +70,7 @@
 
     <div class="text-center">
       <p>
-        Fork me on <a href="https://github.com/floriancourgey/www" target="_blank">GitHub</a>
+        Fork me on <a href="https://github.com/floriancourgey/blog" target="_blank">GitHub</a>
       </p>
     </div>
 
