--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,6 +36,7 @@
             </a>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="{{ "/awesome-adobe-campaign" | relative_url }}">ACC Getting started guide (awesome list)</a>
+              <a class="dropdown-item" href="{{ "/2020/01/adobe-campaign-snippets" | relative_url }}">ACC snippets</a>
             </div>
           </div>
         </li>
