--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,6 +37,8 @@
             <div class="dropdown-menu">
               <a class="dropdown-item" href="{{ "/awesome-adobe-campaign" | relative_url }}">ACC Getting started guide (awesome list)</a>
               <a class="dropdown-item" href="{{ "/2020/01/adobe-campaign-snippets" | relative_url }}">ACC snippets</a>
+              <a class="dropdown-item" href="{{ "/2018/09/adobe-campaign-input-form-helper/" | relative_url }}">Input Forms reference</a>
+              <a class="dropdown-item" href="{{ "/2018/08/use-querydef-the-database-toolkit-in-adobe-campaign" | relative_url }}">queryDef & Database reference</a>
             </div>
           </div>
         </li>
