--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,6 +39,8 @@
               <a class="dropdown-item" href="{{ "/2020/01/adobe-campaign-snippets" | relative_url }}">ACC snippets</a>
               <a class="dropdown-item" href="{{ "/2018/09/adobe-campaign-input-form-helper/" | relative_url }}">Input Forms reference</a>
               <a class="dropdown-item" href="{{ "/2018/08/use-querydef-the-database-toolkit-in-adobe-campaign" | relative_url }}">queryDef & Database reference</a>
+              <a class="dropdown-item" href="{{ "/2019/03/using-dates-in-adobe-campaign" | relative_url }}">Date Best Practices</a>
+              <a class="dropdown-item" href="{{ "/2020/09/delivery-post-processing-best-practices-adobe-campaign" | relative_url }}">Delivery post-processing Best Practices</a>
             </div>
           </div>
         </li>
