--- a/_includes/header.html
+++ b/_includes/header.html
@@ -58,6 +58,8 @@
             </a>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="{% post_url 2018-12-05-unix-cheatsheet %}">UNIX cheatsheet</a>
+              <a class="dropdown-item" href="{% post_url 2021-01-windows-powershell-cheatsheet %}">Windows & Powershell cheatsheet</a>
+              <a class="dropdown-item" href="{% post_url 2021-01-alteryx-cheatsheet %}">Alteryx ETL data cheatsheet</a>
               <a class="dropdown-item" href="{% post_url 2018-12-14-crack-and-hack-cheatsheet %}">Crack & Hack</a>
               <a class="dropdown-item" href="https://floriancourgey.github.io/tools/string/?ref=blog.floriancourgey.com" target="_blank">String tools <i class="fas fa-xs fa-external-link-alt"></i></a>
               <a class="dropdown-item" href="https://floriancourgey.github.io/tools/mpg/?ref=blog.floriancourgey.com" target="_blank">MPG tools <i class="fas fa-xs fa-external-link-alt"></i></a>
