+ footer Authors link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,8 +7,9 @@
       <div class="col-sm-3">
         <h5>Read more</h5>
         <ul class="list-unstyled m-0">
-          <li><a href="/categories">Browse all categories</a></li>
-          <li><a href="/archives">Browse all posts</a></li>
+          <li><a href="{{ '/categories' | relative_url }}">Browse all Categories</a></li>
+          <li><a href="{{ '/archives' | relative_url }}">Browse all Posts</a></li>
+          <li><a href="{{ '/authors' | relatie_url }}">Browse all Authors</a></li>
         </ul>
       </div>
 
