--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,11 +30,11 @@
             </a>
             <div class="dropdown-menu">
               <h4 class="dropdown-header">Adobe Campaign Integrations</h4>
-              <a class="dropdown-item" href="{{ 'azcopy-from-adobe-campaign' | relative_url }}">🟦 Integrate ACC to <b>Azure Blob</b></a>
-              <a class="dropdown-item" href="{{ 'adobe-campaign-to-git' | relative_url }}">🐙 Integrate ACC to <b>Git Repository</b></a>
-              <a class="dropdown-item" href="{{ 'google-shopping-products-import-into-acc' | relative_url }}">🛍️ Integrate <b>Google Shopping</b> to ACC</a>
-              <a class="dropdown-item" href="{{ 'dqm-workflow-javascript-with-query-and-api' | relative_url }}">🔡 Integrate ACC to External DQM vendor</a>
-              <a class="dropdown-item" href="{{ 'use-javascript-libraries-in-adobe-campaign' | relative_url }}/">📚 Integrate Javascript libraries to ACC</a>
+              <a class="dropdown-item" href="{% post_url 2020/2020-11-25-azcopy-from-adobe-campaign %}">🟦 Integrate ACC to <b>Azure Blob</b></a>
+              <a class="dropdown-item" href="{% post_url 2020/2020-03-10-adobe-campaign-to-git %}">🐙 Integrate ACC to <b>Git Repository</b></a>
+              <a class="dropdown-item" href="{% post_url 2020/2020-01-06-google-shopping-products-import-into-acc %}">🛍️ Integrate <b>Google Shopping</b> to ACC</a>
+              <a class="dropdown-item" href="{% post_url 2019/2019-11-08-dqm-workflow-javascript-with-query-and-api %}">🔡 Integrate ACC to External DQM vendor</a>
+              <a class="dropdown-item" href="{% post_url 2018/2018-10-15-use-javascript-libraries-in-adobe-campaign %}/">📚 Integrate Javascript libraries to ACC</a>
               <div class="dropdown-divider"></div>
               <h4 class="dropdown-header">Adobe Campaign Tutorials</h4>
               <a class="dropdown-item" href="{{ "/awesome-adobe-campaign" | relative_url }}">ACC Getting started guide (awesome list)</a>
