--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer h-card">
-  <data class="u-url" href="{{ "/" | relative_url }}"></data>
+  <data class="u-url" href="{% link index.html %}"></data>
 
   <div class="container">
 
@@ -7,9 +7,9 @@
       <div class="col-sm-3">
         <h5>Read more</h5>
         <ul class="list-unstyled m-0">
-          <li><a href="{{ '/categories' | relative_url }}">Browse all Categories</a></li>
-          <li><a href="{{ '/archives' | relative_url }}">Browse all Posts</a></li>
-          <li><a href="{{ '/authors' | relatie_url }}">Browse all Authors</a></li>
+          <li><a href="{% link categories.html %}">Browse all Categories</a></li>
+          <li><a href="{% link archives.html %}">Browse all Posts</a></li>
+          <li><a href="{% link authors.html %}">Browse all Authors</a></li>
         </ul>
       </div>
 
@@ -21,7 +21,7 @@
           <li><a href="https://www.paypal.me/floriancourgey" target="_blank"><i class="fab fa-cc-paypal"></i> <span class="username">Paypal floriancourgey</span></a></li>
           <li><a href="https://www.linkedin.com/in/floriancourgey" target="_blank"><i class="fab fa-linkedin"></i> <span class="username">Linkedin floriancourgey</span></a></li>
           <li><a href="https://yelp.fr/biz/florian-courgey-fontenay-aux-roses" target="_blank"><i class="fab fa-yelp"></i> <span class="username">Yelp florian-courgey</span></a></li>
-          <li><a href="{{ 'feed.xml' | relative_url }}"><i class="fas fa-rss"></i> <span class="username">RSS Feed</span></a></li>
+          <li><a href="{% link feed.xml %}"><i class="fas fa-rss"></i> <span class="username">RSS Feed</span></a></li>
         </ul>
       </div>
 
