--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,12 @@
               🐧 Prestashop
             </a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="{% link categories.html %}?id=prestashop 1.7">Prestashop 1.7</a>
+              <a class="dropdown-item" href="{% post_url 2018/2018-04-23-how-to-create-a-new-front-controller-for-prestashop-1-7 %}">Custom Front Controller</a>
+              <a class="dropdown-item" href="{% post_url 2018/2018-05-28-create-an-admin-for-a-customized-sql-table %}">Custom Admin Controller</a>
+              <a class="dropdown-item" href="{% post_url 2018/2018-05-02-how-to-work-with-the-symfony-kernel-anywhere-in-prestashop-1-7 %}">Custom Symfony Controller</a>
+              <a class="dropdown-item" href="{% post_url 2018/2018-07-17-nginx-configuration-lets-encrypt-wordpress-prestashop %}">Nginx configuration</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{% link categories.html %}?id=prestashop">All Prestashop</a>
             </div>
           </div>
         </li>
@@ -55,11 +60,23 @@
               <span class="sr-only">Toggle Dropdown</span>
             </a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="{% link categories.html %}">Categories</a>
-              <a class="dropdown-item" href="{% link archives.html %}">Archives</a>
+              <a class="dropdown-item" href="{% post_url 2021/2021-05-22-salesforce-service-cloud-acquisition-page %}">Service Cloud Acquisition Page</a>
+              <!--a class="dropdown-item" href="#">Marketing Cloud Journey External</a-->
             </div>
           </div>
         </li>
+        <li class="nav-item">
+          <div class="btn-group">
+            <a href="#" class="nav-link dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              ➡️ Node-RED
+              <span class="sr-only">Toggle Dropdown</span>
+            </a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="{% post_url 2018/2018-11-22-use-node-red-for-automation %}">Node-RED for daily routine Slack notification</a>
+            </div>
+          </div>
+        </li>
+
         <li class="nav-item">
           <div class="btn-group">
             <a href="#" class="nav-link dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -80,13 +97,13 @@
               <span class="sr-only">Toggle Dropdown</span>
             </a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="{% post_url 2018/2018-12-05-unix-cheatsheet %}">UNIX cheatsheet</a>
-              <a class="dropdown-item" href="{% post_url 2021/2021-01-14-windows-powershell-cheatsheet %}">Windows & Powershell cheatsheet</a>
-              <a class="dropdown-item" href="{% post_url 2021/2021-01-14-alteryx-cheatsheet %}">Alteryx ETL data cheatsheet</a>
-              <a class="dropdown-item" href="{% post_url 2018/2018-12-14-crack-and-hack-cheatsheet %}">Crack & Hack</a>
-              <a class="dropdown-item" href="https://floriancourgey.github.io/tools/string/?ref=blog.floriancourgey.com" target="_blank">String tools <i class="fas fa-xs fa-external-link-alt"></i></a>
-              <a class="dropdown-item" href="https://floriancourgey.github.io/tools/mpg/?ref=blog.floriancourgey.com" target="_blank">MPG tools <i class="fas fa-xs fa-external-link-alt"></i></a>
-              <a class="dropdown-item" href="https://floriancourgey.github.io/tools/seo/?ref=blog.floriancourgey.com" target="_blank">SEO tools <i class="fas fa-xs fa-external-link-alt"></i></a>
+              <a class="dropdown-item" href="{% post_url 2018/2018-12-05-unix-cheatsheet %}"><i class="fab fa-linux"></i> UNIX cheatsheet</a>
+              <a class="dropdown-item" href="{% post_url 2021/2021-01-14-windows-powershell-cheatsheet %}"><i class="fab fa-windows"></i> Windows & Powershell cheatsheet</a>
+              <a class="dropdown-item" href="{% post_url 2021/2021-01-14-alteryx-cheatsheet %}"><i class="fas fa-exchange-alt"></i> Alteryx ETL data cheatsheet</a>
+              <a class="dropdown-item" href="{% post_url 2018/2018-12-14-crack-and-hack-cheatsheet %}"><i class="fas fa-user-secret"></i> Crack & Hack</a>
+              <a class="dropdown-item" href="https://floriancourgey.github.io/tools/string/?ref=blog.floriancourgey.com" target="_blank"><i class="fas fa-code"></i>String tools <i class="fas fa-xs fa-external-link-alt"></i></a>
+              <a class="dropdown-item" href="https://floriancourgey.github.io/tools/mpg/?ref=blog.floriancourgey.com" target="_blank"><i class="fas fa-futbol"></i> MPG tools <i class="fas fa-xs fa-external-link-alt"></i></a>
+              <a class="dropdown-item" href="https://floriancourgey.github.io/tools/seo/?ref=blog.floriancourgey.com" target="_blank"><i class="fas fa-share"></i> SEO tools <i class="fas fa-xs fa-external-link-alt"></i></a>
             </div>
           </div>
         </li>
